4.4/_includes/content/login.md
To set up and explore your data, access the ThoughtSpot application from a standard Web browser using a username and password.

Before accessing ThoughtSpot, you need:

-   The Web address (IP address or server name) for ThoughtSpot.
-   A network connection.
-   A Web browser.
-   A username and password for ThoughtSpot.

    Supported Web browsers include:

    |Browser          |Version     |Operating System                   |
    |-----------------|------------|-----------------------------------|
    |Google Chrome    |20 and above| Windows 7 or greater, Linux, MacOS|
    |Mozilla Firefox  |14 and above| Windows 7 or greater, Linux, MacOS|
    |Internet Explorer|11          | Windows 7 or greater |


To log in to ThoughtSpot from a browser:

1. Open the browser and type in the Web address for ThoughtSpot: `http://<hostname_or_IP>`
2. Enter your username and password and click **Enter Now**.
